package Connection;

class Config {


    //protected variables with static so they can be accessed through extend in DBHandler

    static String host = "localhost";

    static String port = "3316";

    static String user = "user";

    static String pass = "user";

    static String database = "taxi_rental";


}
