@startuml

title __TAXI_FINAL_RENTAL's Class Diagram__\n

  namespace App {
    class App.Main {
    }
  }
  

  namespace App {
    class App.Main {
    }
  }
  

  namespace Connection {
    class Connection.Config {
    }
  }
  

  namespace Connection {
    class Connection.Config {
    }
  }
  

  namespace Connection {
    class Connection.DBHandler {
    }
  }
  

  namespace Connection {
    class Connection.DBHandler {
    }
  }
  

  namespace Controllers {
    class Controllers.Customer {
    }
  }
  

  namespace Controllers {
    class Controllers.Customer {
    }
  }
  

  namespace Controllers {
    class Controllers.Taxi {
    }
  }
  

  namespace Controllers {
    class Controllers.Taxi {
    }
  }
  

  namespace Controllers {
    class Controllers.adminController {
    }
  }
  

  namespace Controllers {
    class Controllers.adminController {
    }
  }
  

  namespace Controllers {
    class Controllers.bookNowController {
    }
  }
  

  namespace Controllers {
    class Controllers.bookNowController {
    }
  }
  

  namespace Controllers {
    class Controllers.dashboardController {
    }
  }
  

  namespace Controllers {
    class Controllers.dashboardController {
    }
  }
  

  namespace Controllers {
    class Controllers.loginController {
    }
  }
  

  namespace Controllers {
    class Controllers.loginController {
    }
  }
  

  namespace Controllers {
    class Controllers.myAccountController {
    }
  }
  

  namespace Controllers {
    class Controllers.myAccountController {
    }
  }
  

  namespace Controllers {
    class Controllers.signUpController {
    }
  }
  

  namespace Controllers {
    class Controllers.signUpController {
    }
  }
  

  App.Main -up-|> javafx.application.Application
  App.Main -up-|> javafx.application.Application
  Controllers.adminController .up.|> javafx.fxml.Initializable
  Controllers.adminController o-- Connection.DBHandler : handler
  Controllers.adminController .up.|> javafx.fxml.Initializable
  Controllers.adminController o-- Connection.DBHandler : handler
  Controllers.bookNowController .up.|> javafx.fxml.Initializable
  Controllers.bookNowController -up-|> Controllers.loginController
  Controllers.bookNowController o-- Connection.DBHandler : handler
  Controllers.bookNowController .up.|> javafx.fxml.Initializable
  Controllers.bookNowController o-- Connection.DBHandler : handler
  Controllers.dashboardController .up.|> javafx.fxml.Initializable
  Controllers.dashboardController -up-|> Controllers.loginController
  Controllers.dashboardController .up.|> javafx.fxml.Initializable
  Controllers.dashboardController -up-|> Controllers.loginController
  Controllers.loginController .up.|> javafx.fxml.Initializable
  Controllers.loginController -up-|> Controllers.signUpController
  Controllers.loginController o-- Connection.DBHandler : handler
  Controllers.loginController .up.|> javafx.fxml.Initializable
  Controllers.loginController -up-|> Controllers.signUpController
  Controllers.loginController o-- Connection.DBHandler : handler
  Controllers.myAccountController .up.|> javafx.fxml.Initializable
  Controllers.myAccountController o-- Connection.DBHandler : handler
  Controllers.myAccountController .up.|> javafx.fxml.Initializable
  Controllers.myAccountController o-- Connection.DBHandler : handler
  Controllers.signUpController .up.|> javafx.fxml.Initializable
  Controllers.signUpController o-- Connection.DBHandler : handler
  Controllers.signUpController .up.|> javafx.fxml.Initializable
  Controllers.signUpController o-- Connection.DBHandler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
